--- a/state/package.xml
+++ b/state/package.xml
@@ -53,10 +53,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
+  <build_depend>op3_action_editor</build_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>std_srvs</exec_depend>
+  <exec_depend>op3_action_editor</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
