--- a/state/package.xml
+++ b/state/package.xml
@@ -73,6 +73,12 @@
   <exec_depend>op3_manager</exec_depend>
   <exec_depend>ros_madplay_player</exec_depend>
   <exec_depend>robotis_controller_msgs</exec_depend>
+  <exec_depend>op3_action_module_msgs</exec_depend>
+  <exec_depend>robotis_math</exec_depend>
+  <exec_depend>Boost</exec_depend>
+  <exec_depend>eigen</exec_depend>
+  <exec_depend>yaml-cpp</exec_depend>
+
 
 
 
