--- a/state/list/actions.yaml
+++ b/state/list/actions.yaml
@@ -1,20 +1,20 @@
 # combination action page number and mp3 file path
 action_and_sound: 
-  144: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  146: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  147: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  148: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  149: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  150: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  151: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  152: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  153: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  144: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/recording.mp3"
   154: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   155: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  150: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  150: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   156: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  150: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   157: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  146: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  147: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  146: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  147: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   158: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
+  153: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   145: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
 
 # play list
-default: [144, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 145]
+default: [144, 154, 155, 150, 150, 156, 157, 146, 147, 146, 147, 158, 153, 145]
