--- a/state/list/actions.yaml
+++ b/state/list/actions.yaml
@@ -3,8 +3,6 @@ action_and_sound:
   144: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/recording.mp3"
   154: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   155: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  150: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
-  150: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   156: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   150: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
   157: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
@@ -17,4 +15,4 @@ action_and_sound:
   145: "/home/robotis/TEST/catkin_ws/src/wp-state/state/data/mp3/dance.mp3"
 
 # play list
-default: [144, 154, 155, 150, 150, 156, 157, 146, 147, 146, 147, 158, 153, 145] 
+default: [144, 154, 155, 156, 157, 146, 147, 146, 147, 158, 153, 145] 
